--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -1,7 +1,7 @@
 openapi: '3.0.2'
 info:
   title: API THEye 
-  version: '0.1.2'
+  version: '0.1.3'
 servers:
   - url: https://theye.ch/api/v1
 components:
@@ -40,13 +40,13 @@ components:
         edata:
           type: string
           format: binary
-    lockerKey:
+    lockKey:
       type: object
       properties:
         deviceUUID:
           type: string 
           format: uuid 
-        lockerKey:
+        lockKey:
           type: string
           format: byte 
           example: e10e15d2-eca5-41a2-a923-6ed896bf6cce
@@ -118,9 +118,9 @@ paths:
           description: Request is invalid.
         '406':
           description: Data are corrupted or do not belong to the device. 
-  /lockerKey/{deviceUUID}:
+  /lockKey/{deviceUUID}:
     get:
-      description: Get locker key of a device
+      description: Get lock key of a device
       parameters:
       - name: deviceUUID
         description: "UUID of the device"
@@ -130,7 +130,7 @@ paths:
           type: string 
           format: uuid 
           example: 3fa85f64-5717-4562-b3fc-2c963f66afa6
-      - name: lockerToken
+      - name: lockToken
         description: 128bit Token
         in: query
         required: true
@@ -144,7 +144,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/lockerKey' 
+                $ref : '#/components/schemas/lockKey' 
         '400':
           description: Request is invalid.
         '401':
