--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -1,7 +1,7 @@
 openapi: '3.0.2'
 info:
   title: API THEye 
-  version: '0.1.4'
+  version: '0.1.5'
 servers:
   - url: https://theye.ch/api/v1
 components:
@@ -77,7 +77,19 @@ components:
           aes_key : FFEEDDCCBBAA99887766554433221100
           validity: false 
           creation_date : 2021-02-18T16:32:0Z
-
+    organization:
+      type: object
+      properties:
+        name:
+          type: string
+          example: FiveCo
+        owner:
+          type: integer
+          example: 2
+        users:
+          type: array
+          format: integer
+          example: [1,3]
     point:
       type: object
       properties:
@@ -163,8 +175,20 @@ paths:
           description: OK
         '400':
           description: Request is invalid.
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
         '406':
-          description: Data are corrupted or do not belong to the device. 
+          description: Data are corrupted or do not belong to the device
+        '500':
+          description: Data processing error
+  /logs/:
+    get:
+      description: "Not implemented"
+      responses:
+        '404':
+          description: "Not implemented"
   /devices/:
     get:
       description: "Retrieve all devices"
@@ -175,7 +199,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/devices"
-
   /devices/{deviceID}/:
     get:
       description: "Retrieve a device" 
@@ -195,7 +218,9 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/device"
-  /{deviceID}/log/:
+        '404':
+          description: Not Found
+  /devices/{deviceID}/log/:
     get:
       description: Get log of the device
       parameters:
@@ -214,8 +239,11 @@ paths:
             application/json:
               schema:
                 $ref : '#/components/schemas/log'
-
-  /{deviceID}/lock-key/:
+        '400':
+          description: Bad Request
+        '404':
+          description: Not Found
+  /devices/{deviceID}/lock-key/:
     get:
       description: Get lock key of a device
       parameters:
@@ -249,8 +277,25 @@ paths:
             application/json:
               schema:
                 $ref : '#/components/schemas/lock-key'
-
-  /{deviceID}/ownership/:
+        '400':
+          description: Data not valid
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/lock-key'
+        '403':
+          description: Validity of the device has expired
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/lock-key'
+        '404':
+          description: The key id is not registered
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/lock-key'
+  /devices/{deviceID}/ownership/:
     put:
       description: Claim ownership of the device. 
       parameters:
@@ -287,7 +332,17 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/keys"
-
+    post:
+      description: "Insert a new key"
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/keys"
+        '400':
+          description: Bad Request
   /keys/{keyID}/:
     get:
       description: "Retrieve a specific key" 
@@ -306,3 +361,45 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/key"
+        '400':
+          description: Not Found
+    put:
+      description: "Update a specific key" 
+      parameters:
+      - name: keyID 
+        in: path 
+        description: "ID of the key"
+        required: true
+        schema:
+          type: integer 
+          example: 1 
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/key"
+        '400':
+          description: Bad Request
+        '404':
+          description: Not Found
+    delete:
+      description: "Delete a specific key" 
+      parameters:
+      - name: keyID 
+        in: path 
+        description: "ID of the key"
+        required: true
+        schema:
+          type: integer 
+          example: 1 
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/key"
+        '404':
+          description: Not Found
