--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -56,6 +56,35 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/device'
+    lock-code:
+      type: object
+      properties:
+        key_id:
+          type: integer
+          example: 314 
+        lock_code: 
+          type: string 
+          format: hexadecimal
+          maxLength: 16 
+          minLength: 16 
+          example: 0123456789ABCDEF
+    lock-token:
+      type: object
+      properties:
+        device_id:
+          type: string 
+          format: hexadecimal
+          maxLength: 12 
+          minLength: 12 
+          example: 0123456789AB 
+          readOnly: true
+        lock_token: 
+          type: string
+          format: hexadecimal
+          maxLength: 48 
+          minLength: 48 
+          example: 00112233445566778899AABBCCDDEEFF0123456789ABCDEF
+          readOnly: true
     ownership-code:
       type: object
       properties:
@@ -238,6 +267,57 @@ paths:
                 $ref : '#/components/schemas/detail' 
         '404':
           description: Not found. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/detail' 
+
+  /devices/{device-id}/lock-token/:
+    get:
+      description: Get the lock token of the device.
+      parameters:
+        - name: device-id
+          in: path
+          required: true
+          schema:
+            type: string 
+            format: hexadecimal
+            maxLength: 12 
+            minLength: 12 
+            example: 0123456789AB 
+      requestBody:
+        description: Lock Code 
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref : '#/components/schemas/lock-code' 
+      security:
+        - theye_oauth:
+          - read 
+      responses:
+        '200': 
+          description: Ok, lock-token delivered.  
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/lock-token' 
+        '400':
+          description: Bad request, data format error. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/detail' 
+        '401':
+          description: Unauthorized.
+        '403':
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/detail' 
+        '500':
+          description: Internal server error. 
           content:
             application/json:
               schema:
