--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -347,13 +347,13 @@ paths:
           - write 
       responses:
         '200': 
-          description: Ok, onwership granted. 
+          description: Ok, ownership granted. 
           content:
             application/json:
               schema:
                 $ref : '#/components/schemas/detail' 
         '201': 
-          description: Ok, onwership granted. 
+          description: Ok, ownership granted. 
           content:
             application/json:
               schema:
@@ -396,7 +396,7 @@ paths:
           - write 
       responses:
         '200': 
-          description: Ok, onwership released. 
+          description: Ok, ownership released. 
           content:
             application/json:
               schema:
@@ -429,7 +429,7 @@ paths:
           - write 
       responses:
         '201': 
-          description: Ok, onwership released. 
+          description: Ok, ownership released. 
           content:
             application/json:
               schema:
