--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -1,7 +1,7 @@
 openapi: '3.0.2'
 info:
   title: API THEye
-  version: '0.6.0'
+  version: '0.7.0-alpha'
 servers:
   - url: https://backend.theye.ch/api/v0
 
@@ -113,6 +113,24 @@ components:
           minLength: 48 
           example: 00112233445566778899AABBCCDDEEFF0123456789ABCDEF
           readOnly: true
+    log:
+      type: object
+      properties:
+        device_id:
+          type: string
+          format: hex48 
+          example: 0123456789AB 
+        points:
+          type: array
+          items: 
+            $ref: '#/components/schemas/point'
+          example:
+            - i : 10
+              t : 225
+              h : 452
+            - i : 70
+              t : 245
+              h : 462
     ownership-code:
       type: object
       properties:
@@ -149,6 +167,21 @@ components:
         new_password:
           type: string
           example: NewSecretPa55word 
+    point:
+      type: object
+      properties:
+        i:
+          description: Time Id of the point (to be defined)
+          type: integer 
+          example: 10 
+        t:
+          description: Temperature of the point (in 0.01 [°C]) 
+          type: integer 
+          example: 225 
+        h:
+          description: Humidity of the point (in 0.01 [%]) 
+          type: integer 
+          example: 452 
     profile:
       type: object
       properties:
@@ -351,6 +384,31 @@ paths:
             application/json:
               schema:
                 $ref : '#/components/schemas/detail' 
+  /devices/{deviceID}/log/:
+    get:
+      description: Get log of the device
+      security:
+        - theye_oauth:
+          - read 
+      parameters:
+        - name: device-id
+          in: path
+          required: true
+          schema:
+            type: string 
+            format: hexadecimal
+            maxLength: 12 
+            minLength: 12 
+            example: 0123456789AB 
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/log'
+        '404':
+          description: Not Found
   /devices/{device-id}/own:
      put:
       description: Own the device.
