--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -503,6 +503,10 @@ paths:
       responses:
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/profile' 
         '401':
           description: Unauthorized 
     put:
@@ -523,7 +527,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/profile' 
+                $ref : '#/components/schemas/detail' 
         '401':
           description: Unauthorized 
         '400':
