--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -14,13 +14,23 @@ components:
           type: string
           format: semantic version number
           example: '1.2.3'
-    detail:
+    status:
       type: object
       properties:
-        detail:
-          type: string
-          format: string
-          example: Lorem ipsum. 
+        status:
+          type: object
+          properties:
+            code:
+              type: string
+              example: 400-000
+            name:
+              type: string
+              format: string
+              example: STATUS_NAME 
+            description:
+              type: string
+              format: string
+              example: Lorem ipsum. 
     device:
       type: object
       properties:
@@ -391,11 +401,11 @@ paths:
         '401':
           description: Unauthorized.
         '403':
-          description: Forbidden (user is inactive). 
+          description: Forbidden. 
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
+                $ref : '#/components/schemas/status' 
   /devices/{device-id}/:
     get:
       description: Get device.
@@ -421,18 +431,24 @@ paths:
                 $ref : '#/components/schemas/device' 
         '401':
           description: Unauthorized. 
+        '400':
+          description: Bad request. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
         '403':
           description: Forbidden. 
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
+                $ref : '#/components/schemas/status' 
         '404':
           description: Not found. 
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
+                $ref : '#/components/schemas/status' 
     put:
       description: Put device.
       parameters:
@@ -461,27 +477,27 @@ paths:
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
+                $ref : '#/components/schemas/device' 
+        '401':
+          description: Unauthorized. 
         '400':
-          description: Bad request, data format error. 
+          description: Bad request. 
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
-        '401':
-          description: Unauthorized.
+                $ref : '#/components/schemas/status' 
         '403':
           description: Forbidden. 
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
+                $ref : '#/components/schemas/status' 
         '404':
           description: Not found. 
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
+                $ref : '#/components/schemas/status' 
 
   /devices/{device-id}/compute-lock-token:
     put:
@@ -513,26 +529,32 @@ paths:
             application/json:
               schema:
                 $ref : '#/components/schemas/lock-token' 
+        '401':
+          description: Unauthorized. 
         '400':
-          description: Bad request, data format error. 
+          description: Bad request. 
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
-        '401':
-          description: Unauthorized.
+                $ref : '#/components/schemas/status' 
         '403':
           description: Forbidden. 
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
+                $ref : '#/components/schemas/status' 
+        '404':
+          description: Not found. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
         '500':
           description: Internal server error. 
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
+                $ref : '#/components/schemas/status' 
   /devices/{device-id}/log/:
     get:
       description: Get log of the device
@@ -556,8 +578,32 @@ paths:
             application/json:
               schema:
                 $ref : '#/components/schemas/log'
+        '401':
+          description: Unauthorized. 
+        '400':
+          description: Bad request. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
+        '403':
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
         '404':
-          description: Not Found
+          description: Not found. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
+        '500':
+          description: Internal server error. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
   /devices/{device-id}/own:
      put:
       description: Own the device.
@@ -587,33 +633,39 @@ paths:
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
+                $ref : '#/components/schemas/status' 
         '201': 
-          description: Ok, ownership granted. 
+          description: Ok, ownership granted and device created. 
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
-        '400':
-          description: Bad request, data format error. 
-          content:
-            application/json:
-              schema:
-                $ref : '#/components/schemas/detail' 
+                $ref : '#/components/schemas/status' 
         '401':
-          description: Unauthorized.
+          description: Unauthorized. 
+        '400':
+          description: Bad request. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
         '403':
           description: Forbidden. 
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
+                $ref : '#/components/schemas/status' 
+        '404':
+          description: Not found. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
         '500':
           description: Internal server error. 
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
+                $ref : '#/components/schemas/status' 
   /devices/{device-id}/release:
      put:
       description: Release ownership of the device.
@@ -636,27 +688,33 @@ paths:
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
+                $ref : '#/components/schemas/status' 
+        '401':
+          description: Unauthorized. 
         '400':
-          description: Bad request, data format error. 
+          description: Bad request. 
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
-        '401':
-          description: Unauthorized.
+                $ref : '#/components/schemas/status' 
         '403':
           description: Forbidden. 
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
+                $ref : '#/components/schemas/status' 
         '404':
           description: Not found. 
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
+                $ref : '#/components/schemas/status' 
+        '500':
+          description: Internal server error. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
   /device-info/:
     post:
       description: Post encrypted device info. 
@@ -670,12 +728,40 @@ paths:
       responses:
         '201':
           description: Created 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
         '400':
-          description: Request is invalid.
+          description: Bad request. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
+        '403':
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
+        '404':
+          description: Not found. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
         '409':
-          description: Device info data allready posted.
+          description: Conflict.
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
         '500':
-          description: Data processing error
+          description: Internal server error. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
   /elog/:
     put:
       description: Put encrypted log
@@ -689,16 +775,34 @@ paths:
       responses:
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
         '400':
-          description: Request is invalid.
+          description: Bad request. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
         '403':
-          description: Forbidden
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
         '404':
-          description: Not Found
-        '406':
-          description: Data are corrupted or do not belong to the device
+          description: Not found. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
         '500':
-          description: Data processing error
+          description: Internal server error. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
   /ownership-code/: 
     post:
       description: Create and get an ownership code. 
@@ -707,7 +811,7 @@ paths:
           - write 
       responses:
         '201': 
-          description: Ok, ownership released. 
+          description: Ok, ownership code created. 
           content:
             application/json:
               schema:
@@ -719,7 +823,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
+                $ref : '#/components/schemas/status' 
   /profile/:
     get:
       description: Get user profile.
@@ -735,6 +839,12 @@ paths:
                 $ref : '#/components/schemas/profile' 
         '401':
           description: Unauthorized 
+        '403':
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
     put:
       description: Update the user profile.
       security:
@@ -753,7 +863,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
+                $ref : '#/components/schemas/profile' 
         '401':
           description: Unauthorized 
         '400':
@@ -761,7 +871,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
+                $ref : '#/components/schemas/status' 
+        '403':
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
 
   /profile/password/:
     put:
@@ -779,6 +895,10 @@ paths:
       responses:
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
         '401':
           description: Unauthorized 
         '400':
@@ -786,4 +906,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/detail' 
+                $ref : '#/components/schemas/status' 
+        '403':
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
