--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -1,7 +1,7 @@
 openapi: '3.0.2'
 info:
   title: API THEye
-  version: '0.14.0'
+  version: '0.15.0'
 servers:
   - url: https://backend.theye.ch/api/v0
 
@@ -31,6 +31,16 @@ components:
               type: string
               format: string
               example: Lorem ipsum. 
+    my-client-configuration:
+      type: object
+      properties:
+        version:
+          type: string 
+          example: '1.2.3'
+        configuration:
+          type: object
+          example: {'custom_property_1': '10', 'custom_property_2':'23'}
+             
     device:
       type: object
       properties:
@@ -888,6 +898,79 @@ paths:
             application/json:
               schema:
                 $ref : '#/components/schemas/device-specifications'
+  /my-client-configuration/:
+    get: 
+      description: Get the client configuration of the current user and the current application. 
+      security:
+        - theye_oauth:
+          - read 
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/my-client-configuration' 
+        '401':
+          description: Unauthorized.
+        '403':
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
+        '404':
+          description: Not found. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
+        '500':
+          description: Internal server error. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
+    put: 
+      description: Create or update the client configuration of the current user and the current application. 
+      security:
+        - theye_oauth:
+          - write 
+      requestBody:
+        description: Configuration data 
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref : '#/components/schemas/my-client-configuration' 
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/my-client-configuration' 
+        '201':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/my-client-configuration' 
+        '401':
+          description: Unauthorized.
+        '400':
+          description: Bad request. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
+        '403':
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
+
   /elog/:
     put:
       description: Put encrypted log
