--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -1,7 +1,7 @@
 openapi: '3.0.2'
 info:
   title: API THEye
-  version: '0.15.0'
+  version: '0.16.0'
 servers:
   - url: https://backend.theye.ch/api/v0
 
@@ -189,7 +189,85 @@ components:
     devices:
       type: array
       items:
-        $ref: '#/components/schemas/device'
+        type: object
+        properties:
+          id:
+            type: string 
+            format: base16
+            maxLength: 12 
+            minLength: 12 
+            example: 0123456789AB 
+            readOnly: true
+          name:
+            type: string
+            example: Device A
+          owner:
+            type: integer 
+            example: 1 
+            readOnly: true
+          type:
+            type: integer
+            example: 10
+            readOnly: true
+          model:
+            type: integer
+            example: 11
+            readOnly: true
+          hardware:
+            type: string
+            example: "2.3"
+            readOnly: True
+          battery_voltage:
+            type: integer
+            description: Battery voltage in mV [V]
+            example: "3300"
+          firmware:
+            type: string
+            example: "1.2"
+          organization:
+            type: object
+            properties:
+              id:
+                type: integer
+                example: 11
+                readOnly: true
+              name:
+                type: string
+                example: Company X 
+    devices-summary:
+      type: object
+      properties:
+        total:
+          type: integer
+          example: 52
+        total_owners:
+          type: integer
+          example: 12 
+        total_organizations:
+          type: integer
+          example: 40 
+        owners:
+          type: array
+          items:
+            type: object
+            properties:
+              id: 
+                type: integer
+                example : 314 
+              total :
+                type: integer
+                example : 12 
+        organizations:
+          type: array
+          items:
+            type: object
+            properties:
+              id: 
+                type: integer
+                example : 315 
+              total :
+                type: integer
+                example : 40 
     device-specification:
       type: object
       properties:
@@ -256,7 +334,6 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/device-specification'
-            
     elog:
       type: object
       properties:
@@ -514,6 +591,23 @@ paths:
   /devices/:
     get:
       description: Get all devices of the user.
+      parameters:
+        - name: owner 
+          in : query
+          description: Filter by device owner.
+          schema:
+            type: array
+            items:
+              type: integer
+              example: 314
+        - name: organization 
+          in : query
+          description: Filter by organization.
+          schema:
+            type: array
+            items:
+              type: integer
+              example: 314
       security:
         - theye_oauth:
           - read 
@@ -524,6 +618,45 @@ paths:
             application/json:
               schema:
                 $ref : '#/components/schemas/devices' 
+        '401':
+          description: Unauthorized.
+        '403':
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
+  /devices/summary/:
+    get:
+      description: Get devices summary.
+      parameters:
+        - name: owner 
+          in : query
+          description: Filter by device owner.
+          schema:
+            type: array
+            items:
+              type: integer
+              example: 314
+        - name: organization 
+          in : query
+          description: Filter by organization.
+          schema:
+            type: array
+            items:
+              type: integer
+              example: 314
+      security:
+        - theye_oauth:
+          - read 
+      responses:
+        '200': 
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/devices-summary'
+                  
         '401':
           description: Unauthorized.
         '403':
